deploy/application/base/backend-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noteverse-backend-api
  labels:
    app.kubernetes.io/component: backend-api
spec:
  selector:
    app.kubernetes.io/name: noteverse
    app.kubernetes.io/part-of: noteverse
    app.kubernetes.io/component: backend-api
  ports:
    - name: http
      port: 8000
      targetPort: http
