deploy/application/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noteverse-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: noteverse
    app.kubernetes.io/part-of: noteverse
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
